--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ buildscript {
 		jcenter()
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:1.0.0'
+		classpath 'com.android.tools.build:gradle:1.2.3'
 	}
 }
 apply plugin: 'com.android.application'
@@ -13,13 +13,13 @@ repositories {
 }
 
 android {
-	compileSdkVersion 23
+	compileSdkVersion 15
 	buildToolsVersion "23.0.2"
 
 	defaultConfig {
 		applicationId "lift.app"
 		minSdkVersion 9
-		targetSdkVersion 19
+		targetSdkVersion 15
 		versionCode 1
 		versionName "1.0"
 	}
@@ -37,6 +37,6 @@ android {
 }
 
 dependencies {
-	compile fileTree(dir: 'libs', include: ['*.jar'])
-	compile 'com.android.support:appcompat-v7:19.+'
+	compile fileTree(include: ['*.jar'], dir: 'libs')
+	compile 'com.android.support:appcompat-v7:23.1.1'
 }
