--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 android {
-	compileSdkVersion 23
+	compileSdkVersion 15
 	buildToolsVersion "23.0.2"
 
 	defaultConfig {
@@ -37,6 +37,7 @@ android {
 }
 
 dependencies {
-	compile fileTree(dir: 'libs', include: ['*.jar'])
-	compile 'com.android.support:appcompat-v7:19.+'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:19.+'
+    compile 'com.firebase:firebase-client-android:2.5.1+'
 }
