Login functionality is finished pending testing. Segue is set up to transition to profile set up.

--- a/Lift_iOS/Lift/Info.plist
+++ b/Lift_iOS/Lift/Info.plist
@@ -45,6 +45,10 @@
             </array>
         </dict>
     </array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbauth2</string>
+    </array>
     <key>FacebookAppID</key>
     <string>953917004692848</string>
     <key>FacebookDisplayName</key>
